# gemma_kaggle

./: .coverage  FRONTEND_STATUS.md  IMPLEMENTATION_PLAN.md  README.md  README_BACKEND_SETUP.md  STATUS.md  main.py  pyproject.toml
alergic_nigas/: mvp.py
app/: __init__.py
app/api/v1/: router.py
app/api/v1/endpoints/: forms.py  health.py  translation.py
app/core/: config.py
app/models/: forms.py  translation.py
app/services/: __init__.py  ai_service.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
frontend/src/components/translation/: ImageTranslation.tsx  TextTranslation.tsx
frontend/src/components/ui/: Notification.tsx  NotificationProvider.tsx
frontend/src/pages/: AboutPage.tsx  FormAnalysisPage.tsx  FormsPage.tsx  HomePage.tsx  TranslationPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
tests/: __init__.py  conftest.py  test_forms_api.py  test_health_api.py  test_translation_api.py
